Minor fix quizz + credit

--- a/use_case_RH_dev_v1.0/html/quizzs/dataScientist.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/dataScientist.html
@@ -8,6 +8,7 @@
 		<script src="/libs/qimessaging/2/qimessaging.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/commun.css">
 		<link rel="stylesheet" type="text/css" href="../css/quizzDataScience.css">
+        <!-- CREDITS GOES TO: Icons made by http://www.flaticon.com/authors/eleonor-wang Eleonor Wang from http://www.flaticon.com Flaticon, licensed by http://creativecommons.org/licenses/by/3.0/ Creative Commons BY 3.0 -->
 	 </head>
 	 <title>Quizz dataScientist</title>
 	 <body data-nbquestions="7" data-metier="dataScientist">
@@ -55,7 +56,7 @@
 					<span class="reponseMultiple">2500</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
-				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
+                <img class="submitAnswers" src="../images/verify.png"></img>
 			</div>
 		</div>
 		
@@ -218,7 +219,6 @@
 					<span class="reponseMultiple">La Forêt Amazonienne</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
-				<img data-quizz="dataScientist" class="sortieQuestionnaire" src="../images/out.png"></img>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>		
 			</div>
 		</div>
@@ -227,7 +227,7 @@
 			<p class="question">Qu’est-ce qu’un data scientist est le plus susceptible de commander au restaurant ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
-					<div class="squaredImage" data-reponse="vrai" data-value="L'eau pétillante, en anglais sparkilng water. H2O et Spark sont deux outils de programmation en machine learning et de cluster computing">
+					<div class="squaredImage" data-reponse="vrai" data-value="L'eau pétillante, en anglais sparkling wateure. H2O et Spark sont deux outils de programmation en machine learning et de cluster computing">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">L'eau pétillante</span>
@@ -265,7 +265,7 @@
 			<p class="question">Quels animaux un data scientist peut-il être amené à apprivoiser ?</p>
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
-					<div class="squaredImage" data-reponse="vrai" data-value="Python, le language, l'éléphant, un logo apprécié des outils de big data, la gazelle, mascotte d'Impala un SQL search engine">
+					<div class="squaredImage" data-reponse="vrai" data-value="Python, le language, l'éléphant, un logo apprécié des outils de big data, la gazelle, mascotte d'Impala un èce q elle seurche angeaillene">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Un python</span>
