--- a/use_case_RH_dev_v1.0/html/quizzs/dataScientistfinance.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/dataScientistfinance.html
@@ -58,7 +58,7 @@
 					<span class="reponseMultiple">2500</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
-				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
+                <img class="submitAnswers" src="../images/verify.png"></img>
 			</div>
 		</div>
 		
