--- a/use_case_RH_dev_v1.0/html/quizzs/innovation.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/innovation.html
@@ -5,14 +5,12 @@
 		<script src="../js/jquery-3.1.1.min.js"></script>
 		<script src = "../js/reponseMultiple.js"></script>
 		<script src = "../js/tools.js"></script>
-		<!--<script src="/libs/qimessaging/2/qimessaging.js"></script>-->
+		<script src="/libs/qimessaging/2/qimessaging.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/commun.css">
 		<link rel="stylesheet" type="text/css" href="../css/quizzDataScience.css">
+        <!-- CREDITS GOES TO: Icons made by http://www.flaticon.com/authors/eleonor-wang Eleonor Wang from http://www.flaticon.com Flaticon, licensed by http://creativecommons.org/licenses/by/3.0/ Creative Commons BY 3.0 -->
 	 </head>
 	 <title>Quizz Innovation</title>
-	 <header>
-		
-	 </header>
 	 <body data-nbquestions="5">
 		<img id="selonVous" src="../images/entete.png"></img>
 		<img data-quizz="securite" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
@@ -45,7 +43,7 @@
 				</div>
 				</br>
 				</br>
-				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
+                <img class="submitAnswers" src="../images/verify.png"></img>
 			</div>
 		</div>
 		
@@ -154,7 +152,7 @@
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
-					<div class="squaredImage" data-reponse="vrai" data-value="Le lean start-up et le design thinking" >
+					<div class="squaredImage" data-reponse="vrai" data-value="Le lyne start-up et le design sinekineg" >
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple" style="margin-top:0;">Le lean start-up et le design thinking</span>
@@ -165,7 +163,7 @@
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple" style="margin-top:0;"> Un tableau dynamique et brainstorming</span>
+					<span class="reponseMultiple" style="margin-top:0;">Un tableau dynamique et brainstorming</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
@@ -181,7 +179,4 @@
 			<img id="out"  redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/logout.png"></img>
 		<!-- </a> -->
 	 </body>
-	 <footer>
-		<img id="logo" src="../images/LogoSoge.png"></img>
-	 </footer>
  </html>
