--- a/use_case_RH_dev_v1.0/html/quizzs/modelisateur.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/modelisateur.html
@@ -8,6 +8,7 @@
 		<script src="/libs/qimessaging/2/qimessaging.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/commun.css">
 		<link rel="stylesheet" type="text/css" href="../css/quizzDataScience.css">
+        <!-- CREDITS GOES TO: Icons made by http://www.flaticon.com/authors/eleonor-wang Eleonor Wang from http://www.flaticon.com Flaticon, licensed by http://creativecommons.org/licenses/by/3.0/ Creative Commons BY 3.0 -->
 	 </head>
 	 <title>Quizz modélisateur</title>
 	 <body data-nbquestions="2" data-metier="modelisateur">
@@ -47,7 +48,7 @@
 					<span class="reponseMultiple">360</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
-				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
+                <img class="submitAnswers" src="../images/verify.png"></img>
 			</div>
 		</div>
 		
