--- a/use_case_RH_dev_v1.0/html/quizzs/securite.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/securite.html
@@ -1,4 +1,5 @@
 ﻿ <! DOCTYPE html>
+ 
  <html lang = "fr">
 	 <head>
 		<meta charset="UTF-8"/>
@@ -8,6 +9,7 @@
 		<script src="/libs/qimessaging/2/qimessaging.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/commun.css">
 		<link rel="stylesheet" type="text/css" href="../css/quizzDataScience.css">
+        <!-- CREDITS GOES TO: Icons made by http://www.flaticon.com/authors/eleonor-wang Eleonor Wang from http://www.flaticon.com Flaticon, licensed by http://creativecommons.org/licenses/by/3.0/ Creative Commons BY 3.0 -->
 	 </head>
 	 <title>Quizz sécurité</title>
 	 <body data-nbquestions="4" data-metier="securite">
@@ -47,7 +49,7 @@
 					<span class="reponseMultiple">Une école d'ingénieurs française</span>
 					<img class="icon" src="../images/checked.png"></img>
 				</div>
-				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
+                <img class="submitAnswers" src="../images/verify.png"></img>
 			</div>
 		</div>
 		
