--- a/use_case_RH_dev_v1.0/html/quizzs/soge.html
+++ b/use_case_RH_dev_v1.0/html/quizzs/soge.html
@@ -8,11 +8,12 @@
 		<script src="/libs/qimessaging/2/qimessaging.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/commun.css">
 		<link rel="stylesheet" type="text/css" href="../css/quizzDataScience.css">
+        <!-- CREDITS GOES TO: Icons made by http://www.flaticon.com/authors/eleonor-wang Eleonor Wang from http://www.flaticon.com Flaticon, licensed by http://creativecommons.org/licenses/by/3.0/ Creative Commons BY 3.0 -->
 	 </head>
 	 <title>Quizz Société Générale</title>
 	 <body data-nbquestions="7" data-metier="sogé">
 		<!-- <a href="../informations.html"> -->
-			<img data-quizz="sogé" class="exit" redirection="listeInformations.html" dialog="listeInformation" src="../images/out.png"></img>
+			<img data-quizz="sogé" class="sortieQuestionnaire" redirection="listeInformations.html" dialog="listeInformation" src="../images/out.png"></img>
 		<!-- </a> -->
 		<img id="selonVous" src="../images/entete.png"></img>
 		
@@ -37,14 +38,14 @@
 				</div>
 				</br>
 				<div class="choixMultiple choix3">
-					<div class="squaredImage" data-reponse="vrai" data-value="Nous employons 13000 collaborateurs dans notre filière IT">
+					<div class="squaredImage" data-reponse="vrai" data-value="Nous employons 13000 collaborateurs dans notre filière aille ti">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">13000</span>
 					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				</br>
-				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
+                <img class="submitAnswers" src="../images/verify.png"></img>
 			</div>
 		</div>
 		
@@ -193,7 +194,6 @@
 					<span class="reponseMultiple">53%</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
-				<img data-quizz="dataScientist" class="sortieQuestionnaire" src="../images/out.png"></img>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>		
 			</div>
 		</div>
