--- a/use_case_RH_dev_v1.0/html/domaines/listeDomaineIT.html
+++ b/use_case_RH_dev_v1.0/html/domaines/listeDomaineIT.html
@@ -66,7 +66,7 @@
 			</div>
 		<!-- </a> -->
 		<!-- <a href="calculatrice.html"> -->
-			<div class="domaine right dialogable" style="background-color: lightgray;" name="moamoe">
+			<div class="domaine right dialogable" name="moamoe">
 			 MOA/MOE
 			</div>
 		<!-- </a> -->
