Small fix html quizzs answers

--- a/Quizz_Standalone/html/OuiNon.html
+++ b/Quizz_Standalone/html/OuiNon.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/deuxChoix.css">
  </head>
  <title>oui / non</title>
- <body>
+ <body class="content">
  	<div class="yesNo boutons">
 		<div class="pastilleChoix dialogable" name="oui">
 			Oui
