--- a/Quizz_Standalone/html/domaines/ItFinance.html
+++ b/Quizz_Standalone/html/domaines/ItFinance.html
@@ -15,7 +15,7 @@
  <title>oui / non</title>
  <header>
  	<div class="header">
-		<img id="exitApplication" name="quitter" src="../images/exit.png"></img>
+		<img id="exitApplication" class="dialogable" name="quitter" src="../images/exit.png"></img>
 	</div>
  </header>
  <body>
