--- a/Quizz_Standalone/html/quizzs/dataScientist.html
+++ b/Quizz_Standalone/html/quizzs/dataScientist.html
@@ -12,7 +12,9 @@
 	 </head>
 	 <title>Quizz dataScientist</title>
 	 <body data-nbquestions="7" data-metier="dataScientist">
+	<div class="centered">
 		<img id="selonVous" src="../images/entete.png"></img>
+	</div>
 		<img data-quizz="dataScientist" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Combien y a –t-il de data scientists au sein du pôle de Banque de Grande clientèle et Solutions investisseurs (GBIS) ?</p>
