--- a/Quizz_Standalone/html/quizzs/securite.html
+++ b/Quizz_Standalone/html/quizzs/securite.html
@@ -13,7 +13,9 @@
 	 </head>
 	 <title>Quizz sécurité</title>
 	 <body data-nbquestions="4" data-metier="securite">
-		<img id="selonVous" src="../images/entete.png"></img>
+		<div class="centered">
+			<img id="selonVous" src="../images/entete.png"></img>
+		</div>
 		<img data-quizz="securite" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Qu'est ce qu'une "APT" ?</p>
@@ -93,7 +95,7 @@
 		</div>
 		
 		<div class="propositionVisible question3">
-			<p class="question">Une bonne sécurité c'est d'abord?</p>
+			<p class="question">Une bonne Sécurité c'est d'abord ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<div class="squaredImage" data-reponse="vrai" data-value="Toutes les réponses sont vraies, mais la première est la plus importante">
@@ -115,7 +117,7 @@
 					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">Une bonne protection périmétrique, des firewall partout</span>
+					<span class="reponseMultiple">Une bonne protection périmétrique, des firewalls partout</span>
 					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
