--- a/Quizz_Standalone/html/quizzs/innovation.html
+++ b/Quizz_Standalone/html/quizzs/innovation.html
@@ -12,11 +12,13 @@
 	 </head>
 	 <title>Quizz Innovation</title>
 	 <body data-nbquestions="5">
-		<img id="selonVous" src="../images/entete.png"></img>
+		<div class="centered">
+			<img id="selonVous" src="../images/entete.png"></img>
+		</div>
 		<img data-quizz="securite" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		
 		<div class="propositionVisible question1">
-			<p class="question"> Qu’appelle-t-on une innovation disruptive ?</p>
+			<div class="question"> Qu’appelle-t-on une innovation disruptive ?</div>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<div class="squaredImage" data-reponse="vrai" data-value="Technologies nouvelles, moyens limités, création d’un besoin">
@@ -85,7 +87,7 @@
 					<div class="squaredImage" data-reponse="vrai" data-value="Incompréhension et manque d’ouverture des interlocuteurs et Trouver un espace de travail">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple" style="margin-top:0;">Incompréhension et manque d’ouverture des interlocuteurs</span>
+					<span class="reponseMultiple" >Incompréhension et manque d’ouverture des interlocuteurs</span>
 					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
@@ -110,29 +112,29 @@
 		</div>
 		
 		<div class="propositionVisible question4">
-			<p class="question">Où trouver les financements pour l'innovation d’entreprise ?</p>
+			<p class="question">Où trouver le financement pour l'innovation ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
-					<div class="squaredImage" data-reponse="fausse" >
+					<div class="squaredImage" data-reponse="vrai" data-value="Auprès de son business angel">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple" style="margin-top:0;">Auprès de son entourage personnel</span>
+					<span class="reponseMultiple">Auprès de son équipe où je collabore</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
-					<div class="squaredImage" data-reponse="vrai" data-value="Auprès de son business angel">
+					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">Auprès de son business angel</span>
+					<span class="reponseMultiple">Auprès de son business angel appelé Sponsor</span>
 					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix3">
-					<div class="squaredImage" data-reponse="fausse">
+					<div class="squaredImage" data-reponse="vrai">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple">Auprès de collectivités locales</span>
+					<span class="reponseMultiple">Auprès d'un budget dédié Innovation</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
@@ -147,7 +149,7 @@
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple" style="margin-top:0;">Pack office Microsoft et paper board</span>
+					<span class="reponseMultiple" >Pack office Microsoft et paper board</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
@@ -155,7 +157,7 @@
 					<div class="squaredImage" data-reponse="vrai" data-value="Le lyne start-up et le design sinekineg" >
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple" style="margin-top:0;">Le lean start-up et le design thinking</span>
+					<span class="reponseMultiple">Le lean start-up et le design thinking</span>
 					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
@@ -163,7 +165,7 @@
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
-					<span class="reponseMultiple" style="margin-top:0;">Un tableau dynamique et brainstorming</span>
+					<span class="reponseMultiple">Un tableau dynamique et brainstorming</span>
 					<img class="icon" src="../images/cancel.png"></img>
 				</div>
 				<br/>
