--- a/Quizz_Standalone/html/quizzs/it.html
+++ b/Quizz_Standalone/html/quizzs/it.html
@@ -11,7 +11,9 @@
 	 </head>
 	 <title>Quizz IT</title>
 	 <body data-nbquestions="5" data-metier="it">
-		<img id="selonVous" src="../images/entete.png"></img>
+		<div class="centered">
+			<img id="selonVous" src="../images/entete.png"></img>
+		</div>
 		<img data-quizz="it" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Sur un total de 10, combien de logiciels utilisés par un trader sont entièrement développés en interne à la SGCIB ?</p>
