--- a/Quizz_Standalone/html/quizzs/moa.html
+++ b/Quizz_Standalone/html/quizzs/moa.html
@@ -11,7 +11,9 @@
 	 </head>
 	 <title>Quizz MOA</title>
 	 <body data-nbquestions="5" data-metier="it">
-		<img id="selonVous" src="../images/entete.png"></img>
+		<div class="centered">
+			<img id="selonVous" src="../images/entete.png"></img>
+		</div>
 		<img data-quizz="it" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">la Maîtrise d’Ouvrage à t'elle sa place dans l’innovation ?</p>
