--- a/Quizz_Standalone/html/quizzs/modelisateur.html
+++ b/Quizz_Standalone/html/quizzs/modelisateur.html
@@ -12,7 +12,9 @@
 	 </head>
 	 <title>Quizz modélisateur</title>
 	 <body data-nbquestions="2" data-metier="modelisateur">
-		<img id="selonVous" src="../images/entete.png"></img>
+		<div class="centered">
+			<img id="selonVous" src="../images/entete.png"></img>
+		</div>
 		<img data-quizz="modelisateur" class="sortieQuestionnaire"  redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Quel est le nombre de modèles traités dans l’équipe de modélisation des risques SG?</p>
