--- a/Quizz_Standalone/html/quizzs/soge.html
+++ b/Quizz_Standalone/html/quizzs/soge.html
@@ -12,11 +12,10 @@
 	 </head>
 	 <title>Quizz Société Générale</title>
 	 <body data-nbquestions="7" data-metier="sogé">
-		<!-- <a href="../informations.html"> -->
-			<img data-quizz="sogé" class="sortieQuestionnaire" redirection="listeInformationsSG.html" dialog="listeInformation" src="../images/out.png"></img>
-		<!-- </a> -->
-		<img id="selonVous" src="../images/entete.png"></img>
-		
+ 		<div class="centered">
+			<img id="selonVous" src="../images/entete.png"></img>
+		</div>
+		<img data-quizz="sogé" class="sortieQuestionnaire" redirection="listeInformationsSG.html" dialog="listeInformation" src="../images/out.png"></img>
 
 		<div class="propositionVisible question1">
 			<p class="question">Combien de collaborateurs notre filière IT comporte-t-elle ?</p>
@@ -51,7 +50,7 @@
 		
 		<div class="propositionVisible question2">
 		
-			<p class="question">Notre application a été téléchargée ?</p>
+			<p class="question">L'application Société Générale a été téléchargée ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<div class="squaredImage" data-reponse="vrai" data-value="4 millions de fois">
@@ -90,7 +89,7 @@
 		</div>
 		
 		<div class="propositionVisible question3">
-			<p class="question">De quel incububateur d'innovation sommes-nous partenaires ?</p>
+			<p class="question">De quel incubateur d'innovation sommes-nous partenaires ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<div class="squaredImage" data-reponse="fausse" >
@@ -268,7 +267,7 @@
 		</div>
 		<span id="next"></span>
 		<!-- <a href="../informations.html"> -->
-			<img id="out" redirection="listeInformations.html" dialog="listeInformation" src="../images/logout.png"></img>
+			<img id="out" redirection="listeInformationsSG.html" dialog="listeInformation" src="../images/logout.png"></img>
 		<!-- </a> -->
 	 </body>
  </html>
