Adapting html architecture
-> + Timer to leave app after 45s of Tablet inactivity
-> + Quizz/Dialog Data
-> ~ Clear quizzs lists

--- a/Quizz_Standalone/html/domaines/ItFinance.html
+++ b/Quizz_Standalone/html/domaines/ItFinance.html
@@ -31,9 +31,14 @@
 				Finance
 			</div>
 		</div>
-	 	<div id="SG" class="boutons itfinance">
+	 	<div class="boutons itfinance">
+			<div class="pastilleChoix dialogable" name="data">
+				Data
+			</div>
+		</div>
+	 	<div class="boutons itfinance">
 			<div class="pastilleChoix dialogable" name="SG">
-				Société Générale
+				S.G.
 			</div>
 		</div>
 	</div>
