--- a/Quizz_Standalone/html/domaines/listeDomaineIT.html
+++ b/Quizz_Standalone/html/domaines/listeDomaineIT.html
@@ -37,22 +37,25 @@
 				Sécurité
 				<br/>
 			</div>
-			<div class="domaine right dialogable" style="background-color: lightgray;" name="bi">
-				B.I.
-				<br/>
-			</div>
-			<div class="domaine left dialogable" name="datascientist">
-				Data scientist
-				<br/>
-			</div>
 			<div class="domaine right dialogable" name="it">
 				IT
 				<br/>
 			</div>
-			<div class="domaine left dialogable" name="innovation">
+			<div class="domaine middle dialogable" name="innovation">
 				Innovation
 				<br/>
 			</div>
+<!-- 
+			<div class="domaine right dialogable" name="datascientist">
+				Data scientist
+				<br/>
+			</div>
+			
+			<div class="domaine right dialogable" style="background-color: lightgray;" name="bi">
+				B.I.
+				<br/>
+			</div>
+
 			<div class="domaine right dialogable" style="background-color: lightgray;"  name="infrastructure">
 				Infrastructure
 			</div>
@@ -61,7 +64,8 @@
 			</div>
 			<div class="domaine right dialogable" name="moamoe">
 			 MOA/MOE
-			</div>
+			</div> -->
+
 	</div>
  </body>
 	<div class="content">
