--- a/Quizz_Standalone/html/quizzs/innovation.html
+++ b/Quizz_Standalone/html/quizzs/innovation.html
@@ -115,11 +115,11 @@
 			<p class="question">Où trouver le financement pour l'innovation ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
-					<div class="squaredImage" data-reponse="vrai" data-value="Auprès de son business angel">
+					<div class="squaredImage" data-reponse="vrai" data-value="Toutes les réponses sont vraies">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Auprès de son équipe où je collabore</span>
-					<img class="icon" src="../images/cancel.png"></img>
+					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<div class="choixMultiple choix2">
@@ -135,7 +135,7 @@
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">Auprès d'un budget dédié Innovation</span>
-					<img class="icon" src="../images/cancel.png"></img>
+					<img class="icon" src="../images/checked.png"></img>
 				</div>
 				<br/>
 				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
