--- a/Quizz_Standalone/html/quizzs/it.html
+++ b/Quizz_Standalone/html/quizzs/it.html
@@ -10,20 +10,22 @@
 		<link rel="stylesheet" type="text/css" href="../css/quizzDataScience.css">
 	 </head>
 	 <title>Quizz IT</title>
-	 <body data-nbquestions="5" data-metier="it">
+	 <body data-nbquestions="4" data-metier="it">
 		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
 		</div>
 		<img data-quizz="it" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
-			<p class="question">Sur un total de 10, combien de logiciels utilisés par un trader sont entièrement développés en interne à la SGCIB ?</p>
+			<p class="question">Sur un total de 10, combien de logiciels utilisés par un trader sont entièrement développés en interne ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<div class="squaredImage" data-reponse="fausse">
 						<img class="coche" src="../images/circle.png"></img>
 					</div>
 					<span class="reponseMultiple">4</span>
-					<img class="icon" src="../images/cancel.png"></img>
+					<div>
+						<img class="icon" src="../images/cancel.png"></img>
+					</div>
 				</div>
 				</br>
 				<div class="choixMultiple choix2">
@@ -61,55 +63,9 @@
 			</div>
 		</div>
 		
+		
 		<div class="propositionVisible question2">
-		
-			<p class="question">Combien de personnes travaillent dans le département informatique de la SGCIB ?</p>
-			<div class="jeuReponse" data-derniere-question="false">
-				<div class="choixMultiple choix1">
-					<div class="squaredImage" data-reponse="fausse">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">4000</span>
-					<img class="icon" src="../images/cancel.png"></img>
-				</div>
-				<br/>
-				<div class="choixMultiple choix2">
-					<div class="squaredImage" data-reponse="vrai" data-value="50000 personnes, cela représente environ 33% de l'effectif total">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">50000</span>
-					<img class="icon" src="../images/checked.png"></img>
-				</div>
-				<br/>
-				<div class="choixMultiple choix3">
-					<div class="squaredImage" data-reponse="fausse">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">9000</span>
-					<img class="icon" src="../images/cancel.png"></img>
-				</div>
-				<br/>
-				<div class="choixMultiple choix4">
-					<div class="squaredImage" data-reponse="fausse">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">16000</span>
-					<img class="icon" src="../images/cancel.png"></img>
-				</div>
-				<br/>
-				<div class="choixMultiple choix5">
-					<div class="squaredImage" data-reponse="fausse">
-						<img class="coche" src="../images/circle.png"></img>
-					</div>
-					<span class="reponseMultiple">28000</span>
-					<img class="icon" src="../images/cancel.png"></img>
-				</div>
-				<img class="submitAnswers" src="../images/enter-arrow.png"></img>
-			</div>
-		</div>
-		
-		<div class="propositionVisible question3">
-			<p class="question">Quels sont les langages utilisés pour développer les logiciels de Trading de la Société générale ?</p>
+			<p class="question">Quels sont les langages utilisés pour développer les logiciels de Trading de Société générale ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
 					<div class="squaredImage" data-reponse="vrai" data-value="Nous codons en C#, Java et C++">
@@ -155,7 +111,7 @@
 		</div>
 		
 		
-		<div class="propositionVisible question4">
+		<div class="propositionVisible question3">
 			<p class="question">Quel sont les outils DevOps qui sont utilisés à la SGCIB ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
 				<div class="choixMultiple choix1">
@@ -217,9 +173,9 @@
 			</div>
 		</div>
 		
-		<div class="propositionVisible question5">
+		<div class="propositionVisible question4">
 		
-			<p class="question">Combien de messages par secondes les logiciels de Trading sur obligation peuvent gérer à la SGCIB ?</p>
+			<p class="question">Combien de messages par secondes les logiciels de Trading sur obligation peuvent gérer à la Banque d'investissement ?</p>
 			<div class="jeuReponse" data-derniere-question="true">
 				<div class="choixMultiple choix1">
 					<div class="squaredImage" data-reponse="fausse">
