--- a/Quizz_Standalone/html/quizzs/modelisateur.html
+++ b/Quizz_Standalone/html/quizzs/modelisateur.html
@@ -15,7 +15,7 @@
 		<div class="centered">
 			<img id="selonVous" src="../images/entete.png"></img>
 		</div>
-		<img data-quizz="modelisateur" class="sortieQuestionnaire"  redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
+		<img data-quizz="modelisateur" class="sortieQuestionnaire"  redirection="domaines/listeDomaineFinance.html" dialog="listeDomaineFinance" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Quel est le nombre de modèles traités dans l’équipe de modélisation des risques SG?</p>
 			<div class="jeuReponse" data-derniere-question="false">
@@ -180,6 +180,6 @@
 			</div>
 		</div>-->
 		<span id="next"></span>
-			<img id="out"  redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/logout.png"></img>
+			<img id="out"  redirection="domaines/listeDomaineFinance.html" dialog="listeDomaineFinance" src="../images/logout.png"></img>
 	 </body>
  </html>
