--- a/Quizz_Standalone/html/domaines/listeDomaineData.html
+++ b/Quizz_Standalone/html/domaines/listeDomaineData.html
@@ -34,18 +34,12 @@
  <body>
 	<div class="content">
 			<br/>
-			<div class="domaine left dialogable" name="businessanalyst">
-				 Business Analyst
-			</div>
-			<div class="domaine right dialogable" name="modelisateur">
-				 Modélisateur
-			</div>
-
-<!-- 
-			<div class="domaine right dialogable" name="datascientist">
+			<div class="domaine middle dialogable" name="datascientist">
 				Data scientist
 				<br/>
 			</div>
+<!-- 
+
 			
 			<div class="domaine right dialogable" style="background-color: lightgray;" name="bi">
 				B.I.
