--- a/Quizz_Standalone/html/quizzs/dataScientist.html
+++ b/Quizz_Standalone/html/quizzs/dataScientist.html
@@ -15,7 +15,7 @@
 	<div class="centered">
 		<img id="selonVous" src="../images/entete.png"></img>
 	</div>
-		<img data-quizz="dataScientist" class="sortieQuestionnaire" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/out.png"></img>
+		<img data-quizz="dataScientist" class="sortieQuestionnaire" redirection="domaines/listeDomaineData.html" dialog="listeDomaineData" src="../images/out.png"></img>
 		<div class="propositionVisible question1">
 			<p class="question">Combien y a –t-il de data scientists au sein du pôle de Banque de Grande clientèle et Solutions investisseurs (GBIS) ?</p>
 			<div class="jeuReponse" data-derniere-question="false">
@@ -301,6 +301,6 @@
 			</div>
 		</div>
 		<span id="next"></span>
-			<img id="out" redirection="domaines/listeDomaineIT.html" dialog="listeDomaineIT" src="../images/logout.png"></img>
+			<img id="out" redirection="domaines/listeDomaineData.html" dialog="listeDomaineData" src="../images/logout.png"></img>
 	 </body>
  </html>
